--- a/princess.ejs
+++ b/princess.ejs
@@ -502,7 +502,7 @@
 			<p>Внешняя: ручки двери, ножки, замки.</p>
 		</div>
 	</section>
-	<footer>
+	<footer data-background="#ffffff">
 		<div class="footer-contacts-block">
 			<div class="footer-contact address-block">
 				<a class="footer-contact-link" href="#">Краснодар, улица Тургенева,<br>дом 123</a>
