--- a/princess.ejs
+++ b/princess.ejs
@@ -50,11 +50,12 @@
 		}
 
 		*{
-			transition: color 0.3s linear;
+			transition: color 0.25s linear,
+						border-bottom-color .25s linear;
 		}
 
 		body{
-			transition: background-color 0.3s linear;
+			transition: background-color 0.25s linear;
 		}
 
 		.hide{
@@ -70,7 +71,7 @@
 		}
 
 		.subtitle{
-			transition: opacity 0.5s;
+			transition: opacity 0.3s;
 			opacity: 0.0;
 		}
 		#cat1 {
@@ -80,28 +81,6 @@
 		#category-kitchens{
 			height: 100%;
 		}
-		#dialog-measurement {
-			display: none;
-			padding: 40px;
-			background:#ccc;
-			position: fixed;
-			left:45%;
-			top: 0;
-			z-index: 1000;
-		}
-		#overlay {
-			z-index: 999;
-			background-color:#444;
-			opacity: 0.5;
-			width: 100%;
-			height: 100%;
-			min-width: 100%;
-			min-height: 100%;
-			display: none;
-			position: fixed;
-			top:0;
-			left: 0;
-		}
 		
 		.category-nav{
 			opacity: 0.0;
@@ -110,6 +89,7 @@
 		.subcat {
 			transition: opacity 0.5s;
 		}
+
 		.subcat .active {
 			opacity: 1.0;
 			display: block;
@@ -118,28 +98,6 @@
 		.subcat .hidden{
 			opacity: 0.0;
 			display: none;
-		}
-		.subtitle-menu {
-			width: auto;
-			min-width: 1000px;
-			margin-left:-500px;
-
-		}
-
-		.subtitle-menu span {
-			display: inline-block;
-			margin:10px;
-		}
-
-
-		.subtitle-menu span a{
-			display: inline-block;
-			margin:10px;
-			border-bottom: none;
-			box-shadow: none;
-			outline: none;
-			margin:0px;
-			padding: 100;
 		}
 	</style>
 	<script type="text/javascript">
@@ -268,7 +226,7 @@
 		document.addEventListener('DOMContentLoaded',function(event)
 		{
 			scrollPos=window.scrollY || document.documentElement.scrollTop;
-			document.querySelector('.subcategory-wrapper').style.top = document.querySelector('.logo').offsetTop+document.querySelector('.logo').offsetHeight+20+
+			document.querySelector('.subcategory-wrapper').style.top = document.querySelector('.logo').offsetTop+document.querySelector('.logo').offsetHeight+76+
 				'px';
 			sections=document.getElementsByTagName('section');		
 			stopFixingScroll=false, scrollFixed=false;
@@ -293,7 +251,7 @@
 					if (h.length===0)
 						return ;
 					for (let i=0;i<h.length;i++) {
-						h[i].style.transition="opacity 0.3s linear";
+						h[i].style.transition="opacity 0.25s linear";
 						h[i].style.opacity='0.0';
 					}
 					document.querySelector('.subtitle-menu').style.display = 'block';
@@ -369,52 +327,70 @@
 			{
 				var dialog=document.getElementById('dialog-measurement');
 				dialog.style.display='block';
-				dialog.style.height='300px';
-				document.getElementById('overlay').display='block';
 				event.preventDefault();
 				return false;
 			});
 			document.querySelector('.close').addEventListener('click', function(){
 				var dialog=document.getElementById('dialog-measurement');
 				dialog.style.display='none';
-				dialog.style.height='';
-				document.getElementById('overlay').display='';
 				event.preventDefault();
 				return false;
 			});
 			//dialogs
 			//laZzy upload
+			window.addEventListener('wheel',function(event){
 				
+				if ((window.pageYOffset+document.documentElement.clientHeight)==document.documentElement.offsetHeight){
+					console.log('fire');
+					shadowScroll+=100;
+					let pcent=shadowScroll/1000+1;
+					document.querySelector('.next-category').style.transform = 'scale3d('+pcent + ','+pcent+', 1.0)'
+					if (shadowScroll==1000)
+						console.log('do upload');
+					document.querySelector('.next-category').dispatchEvent(new CustomEvent('scroll'));
+
+				}
+				else {
+					if (shadowScroll!=0)
+					{
+						shadowScroll-=100;
+						let pcent=shadowScroll/1000+1;
+						document.querySelector('.next-category').style.transform = 'scale3d('+pcent + ','+pcent+', 1.0)'
+						
+					}
+				}
+			},false)
+
+
+
+		//	document.querySelector('.next-category').addEventListener('scroll')
 			//lazZy upload
 		});
 	</script>
 
 </head>
 <body>
-	<div class="contacts-block fixed-block">
-		<div class="address hide">
-			<a class="address-link" href="#">Краснодар, Тургенева,&nbsp;123</a>
-			<span class="hours">, c&nbsp;10:00 до&nbsp;18:00</span>
-		</div>
-		<a class="phone-number-link hide" href="tel:+78612153000">+7&thinsp;861&thinsp;215-30-00</a>
+	<div class="address-block fixed-block hide">
+		<a class="address-link" href="#">Краснодар, Тургенева,&nbsp;123</a>
+		<span class="hours">, c&nbsp;10:00 до&nbsp;18:00</span>
 	</div>
 	<div class="logo fixed-block">
 		<span class="logo-sign">Princess</span>
 
 		<span class="logo-subtitle hide">furniture</span>
 		<nav class="subtitle-menu" style="visibility:  none">
-			<span><a class="we-create-link" href="#">Кухни</a></span>
-			<span><a class="we-create-link" href="#">Гардеробные</a></span>
-			<span><a class="we-create-link" href="#">Прихожие</a></span>
-			<span><a class="we-create-link" href="#">Ванные</a></span>
-			<span><a class="we-create-link" href="#">Гостиные</a></span>
-			<span><a class="we-create-link" href="#">Кабинеты</a></span>
+			<a class="we-create-link active" href="#">Кухни</a>
+			<a class="we-create-link" href="#">Гардеробные</a>
+			<a class="we-create-link" href="#">Прихожие</a>
+			<a class="we-create-link" href="#">Ванные</a>
+			<a class="we-create-link" href="#">Гостиные</a>
+			<a class="we-create-link" href="#">Кабинеты</a>
 		</nav>
 	</div>
-	<div class="accounts-block fixed-block">
-		<a class="accounts-link" href="https://instagram.com/princess_mebel">Instagram</a>
+	<div class="phone-block fixed-block">
+		<a class="phone-number-link" href="tel:+78612153000">+7&thinsp;861&thinsp;215-30-00</a>
 	</div>
-	<a href="#" id="consult" class="link-open-chat fixed-block">Проконсультироваться</a>
+	<a href="#" id="consult" class="link-open-chat fixed-block"><span class="hide">Проконсультироваться</span></a>
 	<button class="button-measurer fixed-block" id="call-babes">Вызвать замерщика</button>
 	<section class="top-section" data-background="#BC082B" style="background: transparent;">
 		<h2 class="we-create">
@@ -428,7 +404,7 @@
 			<a href="#" class="we-create-link">Кабинеты</a>
 		</h2>
 	</section>
-	<section class="second-section" style="background: transparent;" data-background="#6367ff">
+	<section class="second-section">
 		<div class="features-block">
 			<div class="feature-header sticker-free">></div>
 			<div class="feature-header">замеряем</div>
@@ -436,7 +412,7 @@
 			<div class="feature-header">доставляем и&nbsp;собираем</div>
 		</div>
 	</section>
-	<section id="category-kitchens" class="category-block" data-background='#ffffff'>
+	<section id="category-kitchens" class="category-block" data-background="#6367ff">
 		<h1 class="category-block-header text-outlined" id="cat1" >Шикарные кухни</h1>
 		<p class="subtitle" >Никаких типовых решений&nbsp;— каждая кухня проектируется и&nbsp;изготавливается по&nbsp;индивидуальному проекту</p>
 		<div class="subcategory-wrapper" >
@@ -452,13 +428,13 @@
 				<p>В&nbsp;основном, мы работаем с&nbsp;итальянскими фабриками-производителями — <a target="_blank" href="https://www.sayerlack.com">Sayerlack</a>, <a target="_blank" href="http://www.mobilclan.com/">Mobiclan</a>, <a target="_blank" href="https://www.ilcam.com">ILCAM</a>, <a target="_blank" href="http://www.mosian.it">Mosian</a> и&nbsp;<a target="_blank" href="http://www.attimecitalia.it">Attimec</a>.</p>
 			</div>
 			<div class="subcategory-content  subcat" id="kitchen-furniture"  data-background="#000000">
-				<h2 class="subcategory-full-title">Надёжная фурнитура</h2>
+				<h2 class="subcategory-full-title">Надёжная <i>фурнитура</i></h2>
 				<p class="subtitle">Мебельную фурнитуру можно разделить на 2 группы: лицевая и крепежная (внутренняя)</p>
 				<p>Внутренняя: скобы, элементы крепления, петли, механизмы ящиков, распашных и откидных фасадов, сложные выкатные конструкции. Blum и Kesseböhmer, австрийская и немецкая.</p>
 				<p>Внешняя: ручки двери, ножки, замки.</p>
 			</div>
 			<div class="subcategory-content subcat" id="kitchen-appliances"  data-background='#ffffff'>
-				<h2 class="subcategory-full-title">Удобная в&nbsp;использовании техника</h2>
+				<h2 class="subcategory-full-title">Удобная <i>в&nbsp;использовании</i> техника</h2>
 				<p class="subtitle">Мебельную фурнитуру можно разделить на 2 группы: лицевая и крепежная (внутренняя)</p>
 				<p>Внутренняя: скобы, элементы крепления, петли, механизмы ящиков, распашных и откидных фасадов, сложные выкатные конструкции. Blum и Kesseböhmer, австрийская и немецкая.</p>
 				<p>Внешняя: ручки двери, ножки, замки.</p>
@@ -467,22 +443,30 @@
 		<div class="scroll-empty" style="overflow: hidden;background: transparent;">
 	
 	</section>
-	<section class="category-block" data-background="#cccccc">
+	<section class="category-block">
 		<div class="subcategory-content" id="our-kitchens">
 			<h2 class="subcategory-full-title">В жизни<a class="link-to-inst" href="https://instagram.com/princess_mebel">@princess_mebel</a></h2>
 			<div class="projects-gallery">
-				<div class="project"></div>
-				<div class="project"></div>
-				<div class="project"></div>
-				<div class="project"></div>
-				<div class="project"></div>
-				<div class="project"></div>
-				<div class="project"></div>
-				<div class="project"></div>
+				<div class="project-link-block"><a href="#" class="project-link"><img class="project-thumb" src="../projects/kitchens/16/1.jpeg"/></a></div>
+				<div class="project-link-block"><a href="#" class="project-link"><img class="project-thumb" src="../projects/kitchens/15/1.jpeg"/></a></div>
+				<div class="project-link-block"><a href="#" class="project-link"><img class="project-thumb" src="../projects/kitchens/14/1.jpeg"/></a></div>
+				<div class="project-link-block"><a href="#" class="project-link"><img class="project-thumb" src="../projects/kitchens/13/1.jpeg"/></a></div>
+				<div class="project-link-block"><a href="#" class="project-link"><img class="project-thumb" src="../projects/kitchens/12/1.jpeg"/></a></div>
+				<div class="project-link-block"><a href="#" class="project-link"><img class="project-thumb" src="../projects/kitchens/11/1.jpeg"/></a></div>
+				<div class="project-link-block"><a href="#" class="project-link"><img class="project-thumb" src="../projects/kitchens/10/1.jpeg"/></a></div>
+				<div class="project-link-block"><a href="#" class="project-link"><img class="project-thumb" src="../projects/kitchens/9/1.jpeg"/></a></div>
+				<div class="project-link-block"><a href="#" class="project-link"><img class="project-thumb" src="../projects/kitchens/8/1.jpeg"/></a></div>
+				<div class="project-link-block"><a href="#" class="project-link"><img class="project-thumb" src="../projects/kitchens/7/1.jpeg"/></a></div>
+				<div class="project-link-block"><a href="#" class="project-link"><img class="project-thumb" src="../projects/kitchens/6/1.jpeg"/></a></div>
+				<div class="project-link-block"><a href="#" class="project-link"><img class="project-thumb" src="../projects/kitchens/5/1.jpeg"/></a></div>
+				<div class="project-link-block"><a href="#" class="project-link"><img class="project-thumb" src="../projects/kitchens/4/1.jpeg"/></a></div>
+				<div class="project-link-block"><a href="#" class="project-link"><img class="project-thumb" src="../projects/kitchens/3/1.jpeg"/></a></div>
+				<div class="project-link-block"><a href="#" class="project-link"><img class="project-thumb" src="../projects/kitchens/2/1.jpeg"/></a></div>
+				<div class="project-link-block"><a href="#" class="project-link"><img class="project-thumb" src="../projects/kitchens/1/1.jpeg"/></a></div>
 			</div>
 		</div>
 	</section>
-	<section id="category-wardrobes" class="category-block next-category">
+	<section id="category-wardrobes" class="category-block next-category" data-background="#cccccc">
 		<h1 class="category-block-header text-outlined">Шкафы и гардеробные</h1>
 		<p class="subtitle">У нас нет типовых решений&nbsp;— каждую кухню мы&nbsp;проектируем и&nbsp;изготавливаем по&nbsp;индивидуальному проекту</p>
 		<ul class="category-nav">
@@ -502,7 +486,7 @@
 			<p>Внешняя: ручки двери, ножки, замки.</p>
 		</div>
 	</section>
-	<footer data-background="#ffffff">
+	<footer>
 		<div class="footer-contacts-block">
 			<div class="footer-contact address-block">
 				<a class="footer-contact-link" href="#">Краснодар, улица Тургенева,<br>дом 123</a>
@@ -539,13 +523,15 @@
 				<textarea placeholder="Место для вопроса"></textarea>
 			</div>
 		</div>
-<div id="overlay"></div>			
-<div id="dialog-measurement">
-	<form>
-		<input type="text" name="where" placeholder="Куда?">
-		<button class="close">Закрыть</button>
-	</form>
-</div>
-	</footer>
+	</footer>			
+	<div id="dialog-measurement">
+		<form>
+			<input type="text" name="where" placeholder="Куда?">
+			<input type="text" name="when" placeholder="Когда?">
+			<input type="text" name="phone" placeholder="Контактный телефон">
+			<button class="ok">Вызвать замерщика</button>
+		</form>
+		<button class="close">╳</button>
+	</div>
 </body>
 </html>
