--- a/princess.ejs
+++ b/princess.ejs
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-	<title>Princess.furniture</title>
+	<title>Princess furniture</title>
 	<link rel="stylesheet" href="_css/style.css">
 	<script src="_js/scroll.js"></script>
 	<style>
